--- a/src/components/menu-item/menu-item.style.scss
+++ b/src/components/menu-item/menu-item.style.scss
@@ -7,6 +7,12 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  background-position: center;
+  background-size: cover ;
+
+  &.large{
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -24,6 +30,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background: rgba(246, 241, 241, 0.76);
 
     .title {
       font-weight: bold;
